# boss-cli

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
boss_cli/: __init__.py  auth.py  browser_login.py  cli.py  client.py  constants.py
boss_cli/commands/: auth.py  recruiter.py
