[project]
name = "boss-cli"
version = "0.1.0"
description = "A CLI for Boss Zhipin (BOSS直聘) — search jobs, chat with bosses from the terminal"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "jackwener", email = "jakevingoo@gmail.com" }]
keywords = ["boss", "zhipin", "cli", "terminal", "job", "recruitment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "browser-cookie3>=0.19",
    "qrcode>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/jackwener/boss-cli"
Repository = "https://github.com/jackwener/boss-cli"
Issues = "https://github.com/jackwener/boss-cli/issues"

[project.scripts]
boss = "boss_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boss_cli"]

[tool.ruff]
target-version = "py310"
line-length = 140
